增加一个服务器时间管理类，通过计算偏移量的模式，获取与数据库不差异的当前时间。但又不需要每次都查询数据库